35th Commit - Video Footage Implemented

--- a/ProjectPortfolio/Views/Home/Index.cshtml
+++ b/ProjectPortfolio/Views/Home/Index.cshtml
@@ -262,7 +262,7 @@
 					to 3rd normal form and accepts (personal) data inputs for storage by the database.
                 </p>
                 <p>Project Demonstration:</p>   
-                <p>Restricted - Unavailable</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ltlTSBWz4eo" frameborder="0" allowfullscreen></iframe>
                 <div class="entry_urls">
                     <p>Github Repository: <a href="https://github.com/johnmlhll/JavaSwingGUI-ProjectPersonalDetails" target="_blank">Project Personal Details</a></p>
                     <p>Live Site - Hyperlink: Restricted - Unavailable</p>
@@ -308,7 +308,7 @@
 					(e.g. encryption for local handset data storage). 
                 </p>
                 <p>Project Demonstration:</p>   
-                <p>Restricted - Unavailable</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/PRMLZkCCC2w" frameborder="0" allowfullscreen></iframe>
                 <div class="entry_urls">
                     <p>Github Repository: <a href="https://github.com/johnmlhll/Android-ProjectSafeHaven" target="_blank">Project Safe Haven</a></p>
                     <p>Live Site - Hyperlink: Restricted - Unavailable</p>
@@ -390,7 +390,7 @@
 					project.
                 </p>
                 <p>Project Demonstration:</p>   
-                <p>Restricted - Unavailable</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/qlxmBGnhxDw" frameborder="0" allowfullscreen></iframe>
                 <div class="entry_urls">
                     <p>Github Repository: <a href="https://github.com/johnmlhll/HTMLCSSJSWeb-ProjectBandB" target="_blank">Project B and B</a></p>
                     <p>Live Site - Hyperlink: <a href="https://johnmlhll.github.io/HTMLCSSJSWeb-ProjectBandB/index.html" target="_blank">Moores B&B</a></p>
@@ -428,7 +428,7 @@
 					were allowed.
                 </p>
                 <p>Project Demonstration:</p>   
-                <p>Restricted - Unavailable</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/sKpRatvJvLY" frameborder="0" allowfullscreen></iframe>
                 <div class="entry_urls">
                     <p>Github Repository: <a href="https://github.com/johnmlhll/Bash-ProjectLinuxAdmin" target="_blank">Project Linux Admin</a></p>
                     <p>Live Site - Hyperlink: Restricted - Unavailable</p>
