--- a/ProjectPortfolio/Views/Shared/_Layout.cshtml
+++ b/ProjectPortfolio/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
     <script src="https://apis.google.com/js/platform.js"></script>
 	<script>onload = loadImages;</script>	
 	<link rel="stylesheet" type="text/css" href="~/Content/Style.css"/>   
+	<meta name="google-site-verification" content="GylvszzIpajAzIJeZ9CY-jlGKayGe_tkoNeGXUT0fCg" /> <!--Google Webmaster Verification-->	
 </head>
 <body>		
     <div id="wrapper">  
