--- a/ProjectPortfolio/Views/About/Index.cshtml
+++ b/ProjectPortfolio/Views/About/Index.cshtml
@@ -39,7 +39,7 @@
     	consultative</a> leadership and <a href="https://www.artsfwd.org/4-types-org-culture/" target="_blank">clan-adhocracy company 
     	culture</a>, I began to plan my future in terms of pursuit of happiness and passion for the work I do. This brought me down 
 		a planned road where milestones were complimented by self discovery and contentment on the journey that has brought me to 
-		Software. This continious journey is marked by the following milestones:
+		Software. This continuous journey is marked by the following milestones:
     </p>
 	<div id="dbs_john">
         <a href="https://about.me/jmulhall" target="_blank">
