--- a/ProjectPortfolio/Views/Home/Index.cshtml
+++ b/ProjectPortfolio/Views/Home/Index.cshtml
@@ -73,7 +73,7 @@
         		</a>	
         		<p>Frameworks/Storage:</p>
         		 <a class="portfolio_images">
-                    <img src="~/Images/imgLogoASPNETMVC.jpg" alt="Image of Microsoft ASP.NET MVC Logo"/>
+                    <img src="~/Images/imgLogoASPNETMVC.png" alt="Image of Microsoft ASP.NET MVC Logo"/>
 					<img src="~/Images/imgLogoXML.png" alt="Image of XML Logo"/>    
                 </a>	
         		 <p>Deployment:</p>
@@ -96,7 +96,7 @@
     			<iframe width="560" height="315" src="https://www.youtube.com/embed/qXU1SuT1Vl0" frameborder="0" allowfullscreen></iframe>
 				<div class="entry_urls">
 				    <p>Github Repository: <a href="https://github.com/johnmlhll/ProjectPortfolio" target="_blank">Project Portfolio</a></p>
-					<p>Live Site - Hyperlink: <a href="jmulhall.azurewebsites.net" target="_blank">Software Portfolio</a></p>
+					<p>Live Site - Hyperlink: <a href="https://jmulhall.azurewebsites.net/" target="_blank">Software Portfolio</a></p>
 				</div> 
     		</div>	
         </div>
@@ -117,7 +117,7 @@
                 </a>    
                 <p>Frameworks/Storage:</p>
                  <a class="portfolio_images">
-                    <img src="~/Images/imgLogoASPNETMVC.jpg" alt="Image of Microsoft ASP.NET MVC Logo"/>
+                    <img src="~/Images/imgLogoASPNETMVC.png" alt="Image of Microsoft ASP.NET MVC Logo"/>
     				<img src="~/Images/imgLogoMicrosoftSQLServer.png" alt="Image of SQL Server Logo"/>	
 					<img src="~/Images/imgLogoXML.png" alt="Image of XML Logo"/> 
                 </a>    
@@ -126,7 +126,7 @@
                     <img src="~/Images/imgLogoAzure.png" alt="Image of Microsoft Azure Logo"/>
                 </a>    
                 <p>Project Trailer:</p>  
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/-R5FL4Z5FFM" frameborder="0" allowfullscreen=true></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/-R5FL4Z5FFM" frameborder="0" allowfullscreen></iframe>
                 <p>Project Description:</p> 
                 <p>
                     This project is build on an ASP.NET (native) framework and is designed to showcase a version 2.0 of a college project
@@ -171,7 +171,7 @@
                     <img src="~/Images/imgLogoGithubPages.png" alt="Image of Github Pages Logo"/>
                 </a>    
                 <p>Project Trailer:</p>  
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Uw5gQywwMPI" frameborder="0" allowfullscreen=true></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Uw5gQywwMPI" frameborder="0" allowfullscreen></iframe>
                 <p>Project Description:</p> 
                 <p>
                     This project is build on an Angular4 framework as a web application front end. The use of Bootstrap and any other
@@ -181,7 +181,7 @@
 					features in developing a web application!
                 </p>
                 <p>Project Demonstration:</p>   
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/YU7M9YB6bVE" frameborder="0" allowfullscreen=true></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/YU7M9YB6bVE" frameborder="0" allowfullscreen></iframe>
                 <div class="entry_urls">
                     <p>Github Repository: <a href="https://github.com/johnmlhll/Angular4-ProjectDublin" target="_blank">Angular 4 - Project Dublin</a></p>
                     <p>Live Site - Hyperlink: <a href="https://johnmlhll.github.io/Angular4-ProjectDublin/" target="_blank">Angular 4 - Project Dublin</a></p>
