--- a/ProjectPortfolio/Views/IrishTechNews/Index.cshtml
+++ b/ProjectPortfolio/Views/IrishTechNews/Index.cshtml
@@ -16,7 +16,7 @@
 		Irish Tech News and are as follows:
     </p>
 	<!--Irish Tech News Section-->
-	<iframe width="560" height="315" src="http://irishtechnews.ie/author/john-mulhall/" frameborder="0" allowfullscreen=true></iframe>
+	<iframe width="560" height="315" src="http://irishtechnews.ie/author/john-mulhall/" frameborder="0" allowfullscreen></iframe>
 	<hr class="hr_class">
 	<p><strong>Articles</strong></p>
 	<!--Article Number 8 KSQL or Not KSQL...-->
