--- a/ProjectPortfolio/Views/Resume/Index.cshtml
+++ b/ProjectPortfolio/Views/Resume/Index.cshtml
@@ -3,16 +3,16 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <article id="resume_wrapper">
-    <h2>Resume</h2>
+	<h2>Resume</h2>
 	<p>
 	    Name: <i>John Mulhall</i> <span class="project_right">Title: <i>Software Developer | Software Engineer</i></span>
 	</p>
 	<div id="language_slideshow">
-        <img id="slideshow_csharp" src="~/Images/imgLogoCSharpVS.jpg"/>
-        <img id="slideshow_bash" src="~/Images/imgLogoBash.png"/>
-        <img id="slideshow_xml" src="~/Images/imgLogoXML.png"/>
-        <img id="slideshow_android" src="~/Images/imgLogoAndroid.png"/>
-        <img id="slideshow_python" src="~/Images/imgLogoPython.png"/>
+        <img id="slideshow_csharp" src="~/Images/imgLogoCSharpVS.jpg" alt="leading slideshow image of C Sharp on Visual studio"/>
+        <img id="slideshow_bash" src="~/Images/imgLogoBash.png" alt="leading slideshow image of Bash scripting"/>
+        <img id="slideshow_xml" src="~/Images/imgLogoXML.png" alt="leading slideshow image of XML"/>
+        <img id="slideshow_android" src="~/Images/imgLogoAndroid.png" alt="leading slideshow image of Android"/>
+        <img id="slideshow_python" src="~/Images/imgLogoPython.png" alt="leading slideshow image of C Sharp of Python"/>
 	</div>
 	<div id="profile">
 		<h3>Profile</h3>
@@ -139,7 +139,7 @@
         </p>
         <p><strong>Finance & Accounting</strong></p>
         <p>
-            Capital Markets | Sorbannes Oxley | Treasury | Cash Management | Accounts Receivable | Accounts Payable | Credit Risk | Financial Accounting | General Ledger
+            Capital Markets | Sorbannes Oxley | Treasury | Cash Management | Accounts Receivable | Accounts Payable | Credit Risk | Financial Accounting | General Ledger | Purchasing
         </p>
         <p><strong>Management</strong></p>
         <p>
@@ -372,7 +372,7 @@
                 <li>
                     <div>
                         <p>
-							<time><strong>2017</strong></time>
+							<strong>2017</strong>
                             Project: MulderbertPX as Software Developer (Non-Commercial) - Developed a version 2.0 of a
 							group project completed during college. Implemented data remodelling bringing validation fully 
 							up to the application layer along with a database redesign.
@@ -384,7 +384,7 @@
 				<li>
                     <div>
                         <p>
-                            <time><strong>2017</strong></time>
+                            <strong>2017</strong>
                             Project: Angular 4 as Software Developer (Non-Commercial) - Developed a pure Angular 4 web application
 							front end to show case Angular 4 tips and sites to see in Dublin city. 
 							Technology Stack: HTML5 | CSS3 | Typescript | AngularJS 4.3 | Github Pages
@@ -394,7 +394,7 @@
     			<li>
 					<div>
                         <p>
-							<time><strong>2017</strong></time>
+						    <strong>2017</strong>
         					Project: Video Analysis as Software Enginner (Commercial R&D) - Developed an application framework in 
 							Java/PostgreSQL on Linux (CentOS) to house the project database and transcode project 
         					code from Kinesense Ltd's priority algorithm into Java for use on the framework. 
@@ -405,7 +405,7 @@
 				<li>
 					<div>
                         <p>
-							<time><strong>2017</strong></time>
+							<strong>2017</strong>
         					Project: Safe Haven as Student Software Developer (Non Commerical) - Developed a registration application 
 							in Android Studio (version 2.3) based on the need for handy and time efficient registration of those in 
 							crises been registered by aid workers using their handheld android devices. 
@@ -416,7 +416,7 @@
 				<li>
                     <div>
                         <p>
-                            <time><strong>2016</strong></time>
+                            <strong>2016</strong>
                             Project: Data Visualisation as a Marketing Technologist (Commercial) - Analysed big dataset on a 3 node
 							cluster looking for patterns in customer behavour on the client's website that can be considered actionable
 							from a commercial perspective. Dataset of in excess of 250 million records.
@@ -427,7 +427,7 @@
 				<li>
                     <div>
                         <p>
-                            <time><strong>2015</strong></time>
+                            <strong>2015</strong>
                             Project: Datameer evaluation as a Community Manager (Non-Commercial) - Tried out and evaluated Datameer
 							Big Data self service platform presenting the results to Hadoop User Group Ireland
                             Technology Stack: Datameer | Hadoop | AWS
@@ -437,7 +437,7 @@
 				 <li>
                     <div>
                         <p>
-                            <time><strong>2013</strong></time>
+                            <strong>2013</strong>
                             Project: Career Change to Software Development as a myself (Personal) - Developed a path to leave
 							Financial Operations and Process Management; moving to Software Development and Engineering
                         </p>
@@ -446,7 +446,7 @@
 				 <li>
                     <div>
                         <p>
-                            <time><strong>2011</strong></time>
+                            <strong>2011</strong>
                             Project: Develop and implement Corporate Card programme as a Project Manager (Commercial) - Designed and 
 							lead the project accross 15 entites in EMEA to introduce corporate cards from a single vendor 
                         </p>
@@ -455,7 +455,7 @@
 			     <li>
                     <div>
                         <p>
-                            <time><strong>2010</strong></time>
+                            <strong>2010</strong>
                             Project: Design and implement a pan European Travel & Expense policy as a Accounts Support Manager (Commercial) - 
 							Designed and lead the project accross 15 entites in EMEA to introduce a common and compliant travel 
 							and expense policy with a centralised processing function in Dublin
@@ -465,7 +465,7 @@
 				<li>
                     <div>
                         <p>
-                            <time><strong>2010</strong></time>
+                            <strong>2010</strong>
                             Project: Evaluate Financial Operations Processes Globally as Project Manager (Commercial) - 
                             Evaluated global accounts receivable, credit risk and accounts payable producing a report for 
 							the senior leadership on the current state of processes and best practice process recommendations for the 
@@ -476,7 +476,7 @@
 				<li>
                     <div>
                         <p>
-                            <time><strong>2008</strong></time>
+                            <strong>2008</strong>
                             Project: Restructure Cash Collection Practices as EMEA AR Team Leader (Commercial) - 
                             Evaluated EMEA collection practices and restructured them to a Sorbannes Oxley complaint set of cash collection
 							and receivable practices accross EMEA
@@ -486,7 +486,7 @@
 				 <li>
                     <div>
                         <p>
-                            <time><strong>2007</strong></time>
+                            <strong>2007</strong>
                             Project: Evaluate Real Estate Busines as Financial Consultant (Commercial) - 
                             Evaluated a real estate business and determined solvency position going forward for business owner
                         </p>
@@ -495,7 +495,7 @@
 				<li>
                     <div>
                         <p>
-                            <time><strong>2007</strong></time>
+                            <strong>2007</strong>
                             Project: Restructure Debt Collection Practices as Credit and Operations Manager (Commercial) - 
                             Evaluated UK debt collection practices for FSA compliance and restructure them for optimal performance 
                         </p>
@@ -504,7 +504,7 @@
 			    <li>
                     <div>
                         <p>
-                            <time><strong>2005</strong></time>
+                            <strong>2005</strong>
                             Project: Design and develop a Credit & Collections Policy as Credit Manager (Commercial) - 
                             Designed and developed a company wide B2B and B2C credit and collections policy for a telecommunications
 							business.
@@ -514,7 +514,7 @@
 				<li>
                     <div>
                         <p>
-                            <time><strong>2004</strong></time>
+                            <strong>2004</strong>
                             Project: Implement and beta test a European Cashiering System (ECS) as Country Project Rep (Commercial) - 
                             Participated in the deployment and user testing of the European Cashiering System controlling cash 
 							transactions on a pan european basis.
