--- a/ProjectPortfolio/Views/Shared/_Layout.cshtml
+++ b/ProjectPortfolio/Views/Shared/_Layout.cshtml
@@ -16,7 +16,9 @@
     <script src="https://apis.google.com/js/platform.js"></script>
 	<script>onload = loadImages;</script>	
 	<link rel="stylesheet" type="text/css" href="~/Content/Style.css"/>   
-	<meta name="google-site-verification" content="GylvszzIpajAzIJeZ9CY-jlGKayGe_tkoNeGXUT0fCg" /> <!--Google Webmaster Verification-->	
+	<!--Google Webmaster Verification-->   	
+
+    <!--Bing Webmaster Verification-->  
 </head>
 <body>		
     <div id="wrapper">  
@@ -80,6 +82,11 @@
                         <script type="IN/Share" data-url="https://jmulhall.azurewebsites.net"></script>
 					</a> 
 				</li>
+				<li>
+					<a>
+					    @Html.ActionLink("Sitemap", "Index", "Sitemap")
+					</a> 
+				</li>    	
             </ul>  
 			<!--Center of footer-->
             <ul id="footer_contact_details">
@@ -109,7 +116,9 @@
     				</li>
     			</ul>
 			</div>
-			<div id="copyright"><sub>&copy; John Mulhall 2017</sub></div>	
+			<div id="copyright"> 
+				<sub>&copy; John Mulhall 2017</sub>
+			</div>	
 		</footer>
 	</div>
 </body>
