--- a/ProjectPortfolio/Views/About/Index.cshtml
+++ b/ProjectPortfolio/Views/About/Index.cshtml
@@ -43,7 +43,7 @@
     </p>
 	<div id="dbs_john">
         <a href="https://about.me/jmulhall" target="_blank">
-            <img src="~/Images/imgCoderJohn.jpg" alt="Image of John Coding at Dublin Business School, Dublin, Ireland"/>
+            <img src="~/Images/imgJohnGrad17ProPic.jpg" alt="Image of John Graduating from Dublin Business School, Dublin, Ireland"/>
         </a>
     </div>
     <ul>
