--- a/ProjectPortfolio/Views/IrishTechNews/Index.cshtml
+++ b/ProjectPortfolio/Views/IrishTechNews/Index.cshtml
@@ -16,7 +16,9 @@
 		Irish Tech News and are as follows:
     </p>
 	<!--Irish Tech News Section-->
-	<iframe width="560" height="315" src="http://irishtechnews.ie/author/john-mulhall/" frameborder="0" allowfullscreen></iframe>
+	<a id="itn_portfolio_image" href="http://irishtechnews.ie/?s=John+Mulhall" target="_blank">
+	    <img src="~/Images/imgIrishTechNews.png" alt="Image of Search for John Mulhall articles from Irish Tech News">
+	</a>
 	<hr class="hr_class">
 	<p><strong>Articles</strong></p>
 	<!--Article Number 8 KSQL or Not KSQL...-->
