--- a/ProjectPortfolio/Views/Resume/Index.cshtml
+++ b/ProjectPortfolio/Views/Resume/Index.cshtml
@@ -8,11 +8,11 @@
 	    Name: <i>John Mulhall</i> <span class="project_right">Title: <i>Software Developer | Software Engineer</i></span>
 	</p>
 	<div id="language_slideshow">
-        <img id="slideshow_csharp" src="~/Images/imgLogoCSharpVS.jpg" alt="leading slideshow image of C Sharp on Visual studio"/>
-        <img id="slideshow_bash" src="~/Images/imgLogoBash.png" alt="leading slideshow image of Bash scripting"/>
-        <img id="slideshow_xml" src="~/Images/imgLogoXML.png" alt="leading slideshow image of XML"/>
-        <img id="slideshow_android" src="~/Images/imgLogoAndroid.png" alt="leading slideshow image of Android"/>
-        <img id="slideshow_python" src="~/Images/imgLogoPython.png" alt="leading slideshow image of C Sharp of Python"/>
+        <img id="slideshow_csharp" src="~/Images/imgLogoCSharpVS.jpg"/>
+        <img id="slideshow_bash" src="~/Images/imgLogoBash.png"/>
+        <img id="slideshow_xml" src="~/Images/imgLogoXML.png"/>
+        <img id="slideshow_android" src="~/Images/imgLogoAndroid.png"/>
+        <img id="slideshow_python" src="~/Images/imgLogoPython.png"/>
 	</div>
 	<div id="profile">
 		<h3>Profile</h3>
