37th Commit - Final V1.0 Commit

--- a/ProjectPortfolio/Views/Resume/Index.cshtml
+++ b/ProjectPortfolio/Views/Resume/Index.cshtml
@@ -8,11 +8,11 @@
 	    Name: <i>John Mulhall</i> <span class="project_right">Title: <i>Software Developer | Software Engineer</i></span>
 	</p>
 	<div id="language_slideshow">
-        <img id="slideshow_csharp" src="~/Images/imgLogoCSharpVS.jpg"/>
-        <img id="slideshow_bash" src="~/Images/imgLogoBash.png"/>
-        <img id="slideshow_xml" src="~/Images/imgLogoXML.png"/>
-        <img id="slideshow_android" src="~/Images/imgLogoAndroid.png"/>
-        <img id="slideshow_python" src="~/Images/imgLogoPython.png"/>
+        <img id="slideshow_csharp" src="/Images/imgLogoCSharpVS.jpg" alt="Slideshow of images starting with CSharp on Visual Studio Logo"/>
+        <img id="slideshow_bash" src="/Images/imgLogoBash.png" alt="Slideshow of images starting with Bash logo"/>
+        <img id="slideshow_xml" src="/Images/imgLogoXML.png" alt="Slideshow of images starting with XML logo"/>
+        <img id="slideshow_android" src="/Images/imgLogoAndroid.png" alt="Slideshow of images starting with Android"/>
+        <img id="slideshow_python" src="/Images/imgLogoPython.png" alt="Slideshow of images starting with Python"/>
 	</div>
 	<div id="profile">
 		<h3>Profile</h3>
