--- a/ProjectPortfolio/Views/Shared/_Layout.cshtml
+++ b/ProjectPortfolio/Views/Shared/_Layout.cshtml
@@ -17,8 +17,9 @@
 	<script>onload = loadImages;</script>	
 	<link rel="stylesheet" type="text/css" href="~/Content/Style.css"/>   
 	<!--Google Webmaster Verification-->   	
-
+    <meta name="google-site-verification" content="GylvszzIpajAzIJeZ9CY-jlGKayGe_tkoNeGXUT0fCg" />
     <!--Bing Webmaster Verification-->  
+	<meta name="msvalidate.01" content="F42FB76B13A8632ACD87DC66EF86286D" />	
 </head>
 <body>		
     <div id="wrapper">  
@@ -72,7 +73,7 @@
 		    <a id="logo"><img src="~/Images/imgMulhallFamilyCrest.png" alt="Image of the Mulhall Family Crest"/></a>
 		    <ul id="footer_shares_linkedin">
 			    <li>
-                    <a href="https://plus.google.com/share?url=https://jmulhall.azurewebsites.net/@ViewBag.Title" target="_blank">
+                    <a href="https://plus.google.com/share?url=https://jmulhall.azurewebsites.net/" target="_blank">
                         <img src="~/Images/imgShareGooglePlus.png" alt="Image of the Google plus share icon"/>
                     </a> 
                 </li>
