1st V1.0 Maintanence Commit - Updated Home View

--- a/ProjectPortfolio/Views/Home/Index.cshtml
+++ b/ProjectPortfolio/Views/Home/Index.cshtml
@@ -56,7 +56,45 @@
 			perusal of my software portfolio more user friendly, so just click on any of the "Show More/Less" buttons under the 
 			project entries to see the details associated with the entry.
 		</p>
-        <!--Portfolio Entry 01 - Project Portfolio-->
+	    <!--10 Portfolio Entry - Project TryParse -->
+       <div class="portfolio_entry">
+            <hr/>   
+            <p>
+                <strong>Project Name:</strong> TryParse
+                <span class="project_right">Publication Date: November 2017</span>
+            </p>
+            <a class="btn_expand">Show More/Less</a>
+            <div class="portfolio_entry_detail">    
+                <p>Languages:</p>   
+                <a class="portfolio_images">
+                    <img src="~/Images/imgLogoJava8.png" alt="Image of Java Logo"/>
+                </a>    
+                <p>Frameworks/Storage:</p>
+                 <a class="portfolio_images">
+                    None
+                </a>    
+                <p>Deployment:</p>
+                <a class="portfolio_images">
+                    <img src="~/Images/imgGithubProfile.png" alt="Image of Github Profile Logo"/>
+                </a>    
+                <p>Project Trailer:</p>  
+                <p>Restricted - Unavailable</p>
+                <p>Project Description:</p> 
+                <p>
+                    This project has is a Java Project designed to replicate the C# method TryParse() which uses the Parse methods for primitive 
+                    datatypes int, long, double and float. Instead of having to exception handle a failure to parse the native Java 
+                    methods, this JAR library returns 0 in the related datatype when NumberFormatException is tripped upon 
+                    a failed parse attempt. The TryParse JAR is available at the Project's github repository below. 
+                </p>
+                <p>Project Demonstration:</p>   
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/bbTohKSNZ6I" frameborder="0" allowfullscreen></iframe>
+                <div class="entry_urls">
+                    <p>Github Repository: <a href="https://github.com/johnmlhll/TryParse" target="_blank">Project TryParse</a></p>
+                    <p>Live Site - Hyperlink: Restricted - Unavailable</p>
+                </div>  
+            </div>  
+       </div>
+        <!--09 Portfolio Entry - Project Portfolio-->
         <div class="portfolio_entry">
             <hr/>   
             <p>
@@ -100,7 +138,7 @@
 				</div> 
     		</div>	
         </div>
-		<!--Portfolio Entry 02 - MulderbertPX-->
+		<!--08 Portfolio Entry - MulderbertPX-->
         <div class="portfolio_entry">
             <hr/>   
             <p>
@@ -148,7 +186,7 @@
 				</div> 	
             </div>  
         </div>
-		<!--Portfolio Entry 03 - Angular4 - Project Dublin-->
+		<!--07 Portfolio Entry - Angular4 Project Dublin-->
         <div class="portfolio_entry">
             <hr/>   
             <p>
@@ -188,7 +226,7 @@
                 </div>  
             </div>  
        </div>
-	   <!--04 Portfolio Entry - Commercial Project (Kinesense Ltd) -->
+	   <!--06 Portfolio Entry - Commercial Project (Kinesense Ltd) -->
 	   <div class="portfolio_entry">
             <hr/>   
             <p>
@@ -269,7 +307,7 @@
                 </div>  
             </div>  
        </div>
-	   <!--06 Portfolio Entry - Project Safe Haven (Java Android) -->
+	   <!--04 Portfolio Entry - Project Safe Haven (Java Android) -->
        <div class="portfolio_entry">
             <hr/>   
             <p>
@@ -315,7 +353,7 @@
                 </div>  
             </div>  
        </div>
-	   <!--07 Portfolio Entry - Project DBS (.NET WinForms) -->
+	   <!--03 Portfolio Entry - Project DBS (.NET WinForms) -->
        <div class="portfolio_entry">
             <hr/>   
             <p>
@@ -356,7 +394,7 @@
                 </div>  
             </div>  
        </div>
-	   <!--08 Portfolio Entry - Project B and B -->
+	   <!--02 Portfolio Entry - Project B and B -->
        <div class="portfolio_entry">
             <hr/>   
             <p>
@@ -397,7 +435,7 @@
                 </div>  
             </div>  
        </div>
-	   <!--09 Portfolio Entry - Project Linux Bash Admin -->
+	   <!--01 Portfolio Entry - Project Linux Bash Admin -->
        <div class="portfolio_entry">
             <hr/>   
             <p>
