2nd V1.0 Maintanence Commit - Updated ITN View

--- a/ProjectPortfolio/Views/IrishTechNews/Index.cshtml
+++ b/ProjectPortfolio/Views/IrishTechNews/Index.cshtml
@@ -21,6 +21,26 @@
 	</a>
 	<hr class="hr_class">
 	<p><strong>Articles</strong></p>
+    <!--Article Number 9 How do you have an effective Software Culture...-->
+    <div class="article_title">
+        <p>
+            How do you have an Effective Software Culture
+            <span class="project_right">Publication Date: 24th November 2017</span> 
+        </p>
+    </div>
+    <a class="btn_expand">Click for More/Less</a>
+    <div class="portfolio_entry_detail">
+        <p>
+            This article explores a successful company culture and how it can be developed to support 
+			sustainable success in software. The article shows how consultative leadership in a correctly
+			structured organisation can deal a sustainable success story in software. For more, you 
+			can click on the following link for 
+            <a href="http://irishtechnews.ie/how-do-you-have-an-effective-software-culture-and-sustainable-success/" target="_blank">
+                how to you have an effective Software Culture and Sustainable Success?
+            </a>    
+        </p>
+    </div>
+	<hr class="hr_class">
 	<!--Article Number 8 KSQL or Not KSQL...-->
     <div class="article_title">
         <p>
