3rd  V1.0 Maintanence Commit - Updated ITN View

--- a/ProjectPortfolio/Views/IrishTechNews/Index.cshtml
+++ b/ProjectPortfolio/Views/IrishTechNews/Index.cshtml
@@ -21,6 +21,29 @@
 	</a>
 	<hr class="hr_class">
 	<p><strong>Articles</strong></p>
+    <!--Article Number 10 UK Inspiring Future Cities Trade Mission to Dublin...-->
+    <div class="article_title">
+        <p>
+            Inspiring Future Cities London's Pitch to Dublin
+            <span class="project_right">Publication Date: 5th December 2017</span> 
+        </p>
+    </div>
+    <a class="btn_expand">Click for More/Less</a>
+    <div class="portfolio_entry_detail">
+        <p>
+            This article reviews the UK Ambassador to Ireland's welcome for the UK's latest trade mission to Ireland. The trade mission 
+            participated at the 
+            <a href="https://www.thedigitalhub.com/event/inspiring-future-cities-by-the-uk-department-for-international-trade-and-smart-dublin-3011/" target="_blank">
+                Inspiring Future Cities
+            </a>
+            event where the UK's trade mission made <strong>elevator pitches</strong> to Dublin City Council for its 
+            <a href="http://smartdublin.ie/" target="_blank">Smart City</a> initiative. For more, you 
+            can click on the following link for 
+            <a href="https://irishtechnews.ie/inspiring-future-cities-londons-pitch-to-dublin/" target="_blank">
+                Inspiring Future Cities London's Pitch to Dublin</a>
+        </p>
+    </div>
+    <hr class="hr_class">
     <!--Article Number 9 How do you have an effective Software Culture...-->
     <div class="article_title">
         <p>
