--- a/ProjectPortfolio/Views/Resume/Index.cshtml
+++ b/ProjectPortfolio/Views/Resume/Index.cshtml
@@ -87,7 +87,7 @@
 			<span class="project_right">Result: 88% - Pass</span>
         </p>
 		<p>
-             06/2017 OCA - IZ0-811 Java Foundations - Certified Junior Asscociate at Cenit College
+             06/2017 OCA - IZ0-811 Java Foundations - Certified Junior Associate at Cenit College
             <span class="project_right">Result: 71% - Pass</span>
         </p>
 		<p>
@@ -103,11 +103,11 @@
             <span class="project_right">Result: 89% - Pass</span>
         </p>
 		<p>
-             05/2015 MTA - 98-366 Web Development Fundamentals at Cenit College
+             05/2015 MTA - 98-363 Web Development Fundamentals at Cenit College
             <span class="project_right">Result: 77% - Pass</span>
         </p>
 		<p>
-             04/2015 MTA - 98-366 Software Development Fundamentals at Dublin Business School
+             04/2015 MTA - 98-361 Software Development Fundamentals at Dublin Business School
             <span class="project_right">Result: 77% - Pass</span>
         </p>
 		<p><strong>Vocational Training</strong></p>
